cambio de charts

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,13 +3,13 @@
         <div>
             <img src="../../assets/img/logo.png" alt="" style="margin-bottom: 16px; width: 100%;">
             <form [formGroup]="dataFormGroup">
-                <mat-form-field fxFlex="100" style="margin-bottom: 16px;" appearance="outline" style="display:block">
+                <mat-form-field style="width:100%;margin-bottom: 16px;" appearance="outline" style="display:block">
                     <mat-label>Usuario</mat-label>
                     <input matInput type="text" formControlName="email" placeholder="Correo electrónico"
                         autocomplete="off">
                 </mat-form-field>
 
-                <mat-form-field fxFlex="100" style="margin-bottom: 16px;" appearance="outline" style="display:block">
+                <mat-form-field style="width:100%;margin-bottom: 16px;" appearance="outline" style="display:block">
                     <mat-label>Contraseña</mat-label>
                     <input matInput [type]="hidePass ? 'password' : 'text'" formControlName="pass" placeholder="***"
                         autocomplete="off">
@@ -19,7 +19,7 @@
                     </button>
                 </mat-form-field>
             </form>
-            <button fxFlex="100" color="primary" mat-raised-button (click)="login()">
+            <button style="width:100%;" color="primary" mat-raised-button (click)="login()">
                 Ingresar
             </button>
         </div>
