--- a/src/app/main/dashboard/country-chart/country-chart.component.html
+++ b/src/app/main/dashboard/country-chart/country-chart.component.html
@@ -1,1 +1,6 @@
-<p>country-chart works!</p>
+<div class="w-100 h-300px">
+    <ngx-charts-bar-vertical [scheme]="colorScheme" [gradient]="gradient" [xAxis]="showXAxis" [yAxis]="showYAxis"
+        [legend]="showLegend" legendPosition="below" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
+        [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [results]="data" (select)="onSelect($event)">
+    </ngx-charts-bar-vertical>
+</div>
