--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -1,13 +1,20 @@
 .title {
     background-color: rgb(51, 51, 51);
     color: #fff;
-    padding: 10px;
+    padding: 16px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
-.pl-xs{
+.view {
+    border-radius: 10px;
+    border: 1px solid gray;
+}
+
+.pl-xs {
     padding-left: 10px;
 }
 
-.pr-xs{
+.pr-xs {
     padding-right: 10px;
 }
