--- a/src/app/main/dashboard/pie-chart/pie-chart.component.html
+++ b/src/app/main/dashboard/pie-chart/pie-chart.component.html
@@ -1,1 +1,6 @@
-<div id="chartdiv" style="width: 100%; height: 500px"></div>
+<div class="w-100 h-300px">
+    <ngx-charts-pie-chart [scheme]="colorScheme" [results]="data" [legend]="showLegend" legendPosition="below"
+        [explodeSlices]="explodeSlices" [labels]="showLabels" [doughnut]="doughnut" [gradient]="gradient"
+        (select)="onSelect($event)">
+    </ngx-charts-pie-chart>
+</div>
