--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,7 @@
-<div>
+<div style="height: 100vh;">
     <mat-toolbar class="main__toolbar">
-        <a class="img-logo main__logo" routerLink="/main">
-            <img src="../../assets/img/logo.png" class="main__logoimage" alt="logo">
+        <a class=" main__logo" routerLink="/main">
+            <img src="../../assets/img/logo.png" class="img-logo" alt="logo">
         </a>
         <span style="flex: 1 1 auto;"></span>
         <button mat-icon-button >
