--- a/src/app/main/report-ip/report-ip.component.html
+++ b/src/app/main/report-ip/report-ip.component.html
@@ -12,7 +12,7 @@
                 <div fxLayout="row wrap" fxLayoutAlign="start end">
                     <mat-form-field class="pl-xs pr-xs" fxFlex="50" fxFlex.gt-xs="30">
                         <mat-label>IP</mat-label>
-                        <input matInput placeholder="Ip" readonly autocomplete="off" formControlName="search">
+                        <input matInput placeholder="Ip" autocomplete="off" formControlName="search">
                     </mat-form-field>
                     <mat-form-field class="pl-xs pr-xs" fxFlex="50" fxFlex.gt-xs="30">
                         <mat-label>Desde - Hasta</mat-label>
